# Trading_Bot

./: pyproject.toml
src/: config.py  connection.py  data_loader.py  features.py  model_trainer.py  preprocessing.py
test/: conftest.py  test_connection.py  test_data_loader.py  test_features.py  test_model_trainer.py  test_preprocessing.py
test_data/: EURUSD_16385_features_test.csv  EURUSD_16385_test.csv
