[project]
name = "trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "logger>=1.4",
    "metatrader5>=5.0.5572",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "ta>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]

[pytest]
markers = [
    "live: Tests that require an active MetaTrader 5 terminal and internet connection."
]
filterwarnings = [
    "ignore::UserWarning:MetaTrader5",
    "ignore::FutureWarning:MetaTrader5",
    "ignore::RuntimeWarning:MetaTrader5",
    "ignore::DeprecationWarning:MetaTrader5",
    "ignore::DeprecationWarning:pandas",
    "ignore::FutureWarning",
]
