[project]
name = "trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "logger>=1.4",
    "metatrader5>=5.0.5572",
    "mlflow>=2.10.0",
    "pandas<3.0.0",
    "protobuf==3.20.3",
    "scikit-learn>=1.8.0",
    "setuptools<70.0.0",
    "statsmodels>=0.14.6",
    "ta>=0.11.0",
    "xgboost>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]


[pytest]
markers = [
    "live: Tests that require an active MetaTrader 5 terminal and internet connection."
]
filterwarnings = [
    "ignore::UserWarning:MetaTrader5",
    "ignore::FutureWarning:MetaTrader5",
    "ignore::RuntimeWarning:MetaTrader5",
    "ignore::DeprecationWarning:MetaTrader5",
    "ignore::DeprecationWarning:pandas",
    "ignore::FutureWarning",
]


